# TDT4230-Blackhole-Render

./: CMakeLists.txt  Final Project Report.docx  README.md  shadertoy.cpp
assets/: credits.txt  info.txt
shader/: blackhole_main.frag  bloom_brightness_pass.frag  bloom_composite.frag  bloom_downsample.frag  bloom_upsample.frag  passthrough.frag  simple.vert  skybox.frag  tonemapping.frag
src/: fragment_shader.glsl  imgui_impl_glfw.cpp  main.cpp  shader.cpp  texture.cpp  vertex_shader.glsl
